--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
 		"typescript": "^5.0.0",
 		"vite": "^5.0.3"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"googleapis": "^144.0.0"
+	}
 }
